- fixed lots of minor , almost invisible bugs:  * no more issues with accidental deselection , thanks to an event blocking "toolbar" on top (to prevent event propagation to the object selection handlers) : fixes #54  * corrected issue with concurent setting of flags between polymer's "job" and mouseUp handling for transformations : fixes #55
- refactored and simplified most of the observation & operation
dispatching in usco-transforms
- added a level of indirection in history ui , so that the event handlers
are not the api methods themselves

--- a/embed.css
+++ b/embed.css
@@ -212,7 +212,8 @@ border: white;
 
 
 ulti-viewer::shadow #history{
-  position:absolute;top:5px;left:380px;z-index:15;
+  position:absolute;top:5px;left:380px;z-index:15;background:white;
+  display: inline-block
 }
 
 
@@ -221,6 +222,13 @@ ulti-viewer::shadow #inputOutput{
 
 }
 
+ulti-viewer::shadow #toolBar{
+  width:100%;
+  height:45px;
+  position:absolute;
+  left:0px;
+  z-index:14;
+}
 
 /*styling of 3d elements using css*/
 ulti-viewer /deep/ dimensions-helper-group /deep/ distance-helper{
